--- a/cowork_app/pubspec.yaml
+++ b/cowork_app/pubspec.yaml
@@ -30,8 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.6.6
-  http: ^1.5.0
+  get: ^4.7.2
+  loggy: ^2.0.3
+  http: ^1.3.0
+  shared_preferences: ^2.5.3
+  flex_color_scheme: ^8.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
