--- a/cowork_app/pubspec.yaml
+++ b/cowork_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.7.2
+  sqflite: ^2.3.0
   loggy: ^2.0.3
   http: ^1.3.0
   shared_preferences: ^2.5.3
