--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.7.2
-  sqflite: ^2.3.0
   loggy: ^2.0.3
   http: ^1.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   shared_preferences: ^2.5.3
   flex_color_scheme: ^8.2.0
 
@@ -45,6 +46,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
